--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=7.1",
         "simple-bus/message-bus": "~3.0",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "ramsey/uuid": "^3.7"
     },
     "autoload": {
         "psr-4": {
